--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,14 @@ MANIFEST
 *.manifest
 *.spec
 
+./vscode
+./Code/Dynamic/bin
+./Code/.idea
+./Code/.vscode
+./Code/Dynamic/.obj
+
+
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
